# openclaw

./: CLAUDE.md  tsdown.config.ts
apps/windows/: package.json
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/src/: gateway.rs  lib.rs  main.rs
docs/: INSTALLATION.md  RELEASE_v1.0.md  docs.json
docs/gateway/: configuration-reference.md
docs/tools/: plugin.md
extensions/rog-aura/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-automate/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-control-center/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-fan/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-gateway-bridge/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-hardware/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-overlay/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/rog-win-shared/: index.test.ts  index.ts  package.json
extensions/win-app-control/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/win-clipboard/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/win-desktop/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/win-file-search/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/win-gamepad/: index.test.ts  index.ts  openclaw.plugin.json  package.json
extensions/win-monitor/: index.ts  (+3 more)
scripts/: RELEASE_CHECKLIST.md
(+78 files in other folders)
